# AI-Resume-Analyzer

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_users_table.py  0002_create_resumes_table.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: AIAnalysisCard.tsx  ATSScoreCard.tsx  JobMatchListCard.tsx  JobMatchScoreCard.tsx  Navbar.tsx  ResumeFeedbackCard.tsx  Sidebar.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/layouts/: AuthLayout.tsx  MainLayout.tsx
frontend/src/pages/: Dashboard.tsx  JobMatching.tsx  Login.tsx  NotFound.tsx  Register.tsx  UploadResume.tsx
frontend/src/routes/: AppRoutes.tsx  ProtectedRoute.tsx
frontend/src/services/: authService.ts  jobMatchingService.ts  resumeService.ts
frontend/src/types/: auth.ts  jobMatching.ts  resume.ts
frontend/src/utils/: tokenStorage.ts
src/ai_resume_analyzer/: __init__.py  config.py  main.py
src/ai_resume_analyzer/ai/: __init__.py  base.py  exceptions.py  factory.py  gemini_provider.py  schemas.py  service.py
src/ai_resume_analyzer/api/: auth.py  resumes.py
src/ai_resume_analyzer/auth/: __init__.py  dependencies.py  jwt.py
tests/unit/: test_config.py  test_database_url.py  test_gemini_provider.py  test_job_matching.py  test_package_metadata.py  test_regex_extractor.py  test_scoring_service.py
uploads/resumes/: adc9491a-6526-4969-890d-086100c6ddb4.docx
(+57 files in other folders)
