[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "ai-resume-analyzer"
version = "0.1.0"
description = "Production-grade foundation for an AI Resume Analyzer."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [
  { name = "AI Resume Analyzer Team" },
]
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.7.0",
  "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "black>=24.10.0",
  "hatchling>=1.26.0",
  "isort>=5.13.2",
  "mypy>=1.13.0",
  "pre-commit>=4.0.0",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ai_resume_analyzer"]

[tool.hatch.build.targets.sdist]
include = [
  "/README.md",
  "/pyproject.toml",
  "/src",
  "/tests",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "SIM",
  "UP",
]

[tool.mypy]
python_version = "3.12"
files = ["src", "tests"]
mypy_path = "src"
strict = true
pretty = true
show_error_codes = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--cov=ai_resume_analyzer",
  "--cov-report=term-missing:skip-covered",
  "--cov-fail-under=80",
]
